--- a/src/style.css
+++ b/src/style.css
@@ -18,8 +18,12 @@
   
 }
 
-html, body {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+html, body, #root {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden; 
+}
+
+body {
+  overflow-y: auto;
 }
